Agrego clases con BEM

--- a/index.html
+++ b/index.html
@@ -6,109 +6,107 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <a href="#">INICIAR SESIÓN</a>
-        <img src="./image/header.webp" alt="Extrenos">
-    </header>
-    <main>
-        <section>
-            <div>
+    <header class="header">
+        <div class="header-superior">
+            <a href="#">INICIAR SESIÓN</a>
+            <img src="./image/header.webp" alt="Extrenos">
+        </div>
+        <div class="header-inferior">
+            <div class="header-inferior_descripcion">
                 <img src="./image/logo-disney-sinFondo.png" alt="logo disney+">
                 <h2>Hay un nuevo Disney+</h2>
                 <h3>donde todo se encuentra</h3>
             </div>
-            <div>
-                <div>
+            <div class="header-inferior_eleccionPlanes">
+                <div class="header-inferior_eleccionPlanes_Estandar">
                     <a href="#">DISNEY+ ESTÁNDAR</a>
                     <h4>Disney+ Estandar uncluye una seleccion de canales de ESPN (ESPN e ESPN3)</h4>
                 </div>
-                <div>
+                <div class="header-inferior_eleccionPlanes_Premium">
                     <a href="#">DISNEY PREMIUM</a>
                     <h4>Disney+ Premium incluye todos los canales basicos de ESPN, torneos y mas ed 500 eventos exclusivos por mes</h4>
                 </div>
-                <div>
+                <div class="header-inferior_eleccionPlanes_detalles">
                     <a href="#">Ver los detalles de los planes</a>
                 </div>
             </div>
-        </section>
-        <section>
-            <div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="main-Seccion_uno">
+            <div class="main-Seccion_uno-descripcion">
                 <h4>Las mejores series y películas de Star y de deporte de ESPN</h4>
                 <h5>Estrenos de películas, clásicos, sagas, comedias animadas y producciones originales de Star, ademas de los deportes y programas en vivo de ESPN.</h5>
             </div>
-            <div>
+            <div class="main-Seccion_uno_imagen">
                 <img src="./image/cartelera1.webp" alt="">
             </div>
         </section>
-        <section>
-            <div>
+        <section class="main-Seccion_dos">
+            <div class="main-Seccion_dos_titulo">
                 <h2>¿Qué plan vas a elegir?</h2>
                 <h4>Pdrás modificarlo o cancelarlo cuando quieras.</h4>
             </div>
-            <div>
-                    <div>
-                        <div>
-                            <img src="logo de disney">
-                            <h2>Estándar</h2>
-                            <a href="#">ARS 7.399/MES (FINAL)**</a>
-                        </div>
-                        <div>
-                            <img src="logo de disney">
-                            <h2>Premium</h2>
-                            <a href="#">ARS 10.549/MES (FINAL)**</a>
-                        </div>
-                    </div>
-                    <div>
+            <div class="main-Seccion_dos_eleccion">
+                <div class="main-Seccion_dos_eleccion_estandar">
+                    <h2>Estándar</h2>
+                    <a href="#">ARS 7.399/MES (FINAL)**</a>
+                </div>
+                <div class="main-Seccion_dos_eleccion_premium">
+                    <h2>Premium</h2>
+                    <a href="#">ARS 10.549/MES (FINAL)**</a>
+                </div>
+                <div class="main-Seccion_dos_eleccion_Estrenos">
                         <h3>Estrenos de películas, series originales y clásicos de Disney, Pixar, Marvel, Star Wars, National Geographic y Star</h3>
                         <h3>*</h3>
                         <h3>*</h3>
-                    </div>
-                    <div>
+                </div>
+                <div class="main-Seccion_dos_eleccion_Calidad">
                         <h3>Calidad de video hasta 4K UHD/HDR y sonido Dolby Atmos***</h3>
                         <h3>-</h3>
                         <h3>*</h3>
-                    </div>
-                    <div>
+                </div>
+                <div class="main-Seccion_dos_eleccion_Dispositivos">
                         <h3>Dispositivos para ver en simultáneo</h3>
                         <h3>2</h3>
                         <h3>4</h3>
-                    </div>
-                    <div>
+                </div>
+                <div class="main-Seccion_dos_eleccion_Descargas">
                         <h3>Descargas para ver tus favoritos sin conexión ni demoras</h3>
                         <h3>*</h3>
                         <h3>*</h3>
-                    </div>
-                    <div>
+                </div>
+                <div class="main-Seccion_dos_eleccion_Eventos">
                         <p>* Los eventos en directo y deportivos incluyen publicidad como parte de cada transmisión, independientemente de tu plan.<br>
                             ** El precio podría variar en caso de que el pago se realice en otras plataformas. Podrían aplicar cargos de terceros.<br>
                             *** La calidad de audio y video y las descargas dependen del servicio de internet, las capacidades del dispositivo, el tipo de contenido y el nivel de servicio.</p>
-                    </div>
+                </div>
             </div>
         </section>
-        <section>
-            <div>
+        <section class="main-Secccion_tres">
+            <div class="main-Secccion_tres_descripcion">
                 <h3>Solo en Disney+</h3>
                 <h5>¡Las mejores producciones originales y exclusivas</h5>
             </div>
-            <div>
+            <div class="main-Secccion_tres_imagen">
                 <img src="./image/cartelera2.jpg" alt="Cartelera 2">
             </div>
         </section>
-        <section>
-            <div>
-                <div>
+        <section class="main-Seccion_cuatro">
+            <div class="main-Seccion_cuatro_superior">
+                <div class="main-Seccion_cuatro_superior_descripcion">
                     <h2>Cuando y donde quieras</h2>
                     <h3>Disfrutá tus favoritos en cualquier momento y lugar.</h3>
                 </div>
-                <div>
+                <div class="main-Seccion_cuatro_superior_imagen">
                     <img src="./image/imagen-diferentesPantallas.jpeg" alt="">
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="main-Seccion_cuatro_inferior">
+                <div class="main-Seccion_cuatro_inferior_titulo">
                     <h2>Preguntas frecuentes</h2>
                 </div>
-                <div>
+                <div class="main-Seccion_cuatro_inferior_preguntas">
                     <a href="#">¿Qué incluye Disney+</a>
                     <a href="#">Cómo puedo pagar?</a>
                     <a href="#">Dónde puedo ver Disney+?</a>
@@ -116,35 +114,35 @@
             </div>
         </section>
     </main> 
-    <footer>
-        <div>
-            <div>
+    <footer class="footer">
+        <div class="footer-informacion">
+            <div class="footer-informacion_politicas_acuerdos">
                 <h3>Más informacion</h3>
                 <h4>Términos de uso</h4>
                 <h4>Política de privacidad</h4>
                 <h4>publicidad personalizada</h4>
                 <h4>Acuerdo de Suscripcion</h4>
             </div>
-            <div>
+            <div class="footer-informacion_ayuda">
                 <h3>Ayuda</h3>
                 <h4>Centro de ayuda</h4>
                 <h4>Dispositivos compatibles</h4>
                 <h4>Acerca de Disney+</h4>
             </div>
-            <div>
+            <div class="footer-informacion_listado">
                 <h3>Originales</h3>
                 <h4>The Acolyte</h4>
                 <h4>Echo</h4>
                 <h4>Loki</h4>
             </div>
-            <div>
+            <div class="footer-informacion_titulos">
                 <h3>Peliculas y series</h3>
                 <h4>Monsters at Work</h4>
                 <h4>Elementos</h4>
                 <h4>The Marvels</h4>
                 <h4>Los Simpson</h4>
             </div>
-            <div>
+            <div class="footer-informacion_colecciones">
                 <h3>Colecciones</h3>
                 <h4>Todas las colecciones</h4>
                 <h4>Comedias</h4>
@@ -154,15 +152,15 @@
                 <h4>Musicales</h4>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="footer-empresas">
+            <div class="footer-empresas_plataformas">
                 <a href="">Marvel</a>
                 <a href="">Star Wars</a>
                 <a href="">National Geographic</a>
                 <a href="">Pixar</a>
                 <a href="">Disney</a>
             </div>
-            <div>
+            <div class="footer-empresas_redes">
                 <a href="#"><img src="./image/twitter.png"></a>
                 <a href="#"><img src="./image/facebook (1).png"></a>
                 <a href="#"><img src="./image/instagram (1).png"></a>
@@ -170,10 +168,10 @@
                 <a href="#"><img src="./image/youtube.png"></a>
             </div>
         </div>
-        <div>
+        <div class="footer-logo">
             <img src="./image/logo-disney-sinFondo.png" alt="">
         </div>
-        <div>
+        <div class="footer-licencias">
            <p> © 2024 Disney y su familia de compañías afiliadas.</p> 
            <p>La programación del contenido deportivo difiere según el plan. Disney+ requiere una suscripción y ser mayor de 18 años. Contenidos sujetos a disponibilidad.</p>
            <p>El servicio Disney+ es comercializado por The Walt Disney Company (Argentina) S.A., Tucumán 1, Piso 4º (C1049AAA) Ciudad Autónoma de Buenos Aires, Argentina y número de CUIT 30-63984459-1.</p>
