agrego estilos al header

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
     <header class="header">
         <div class="header-superior">
-            <a href="#">INICIAR SESIÓN</a>
-            <img src="./image/header.webp" alt="Extrenos">
+            <a class="header-superior_enlace" href="#">INICIAR SESIÓN</a>
         </div>
         <div class="header-inferior">
-            <div class="header-inferior_descripcion">
+            <div class="header-inferior_imagen">
                 <img src="./image/logo-disney-sinFondo.png" alt="logo disney+">
+            </div>
+            <div class="header-inferior_descripcion">
                 <h2>Hay un nuevo Disney+</h2>
-                <h3>donde todo se encuentra</h3>
+                <h2>donde todo se encuentra</h3>
             </div>
             <div class="header-inferior_eleccionPlanes">
                 <div class="header-inferior_eleccionPlanes_Estandar">
