Agrego estilos a las secciones

--- a/index.html
+++ b/index.html
@@ -48,59 +48,69 @@
         <section class="main-Seccion_dos">
             <div class="main-Seccion_dos_titulo">
                 <h2>¿Qué plan vas a elegir?</h2>
-                <h4>Pdrás modificarlo o cancelarlo cuando quieras.</h4>
+                <h4>Podrás modificarlo o cancelarlo cuando quieras.</h4>
             </div>
             <div class="main-Seccion_dos_eleccion">
-                <div class="main-Seccion_dos_eleccion_estandar">
-                    <h2>Estándar</h2>
-                    <a href="#">ARS 7.399/MES (FINAL)**</a>
-                </div>
-                <div class="main-Seccion_dos_eleccion_premium">
-                    <h2>Premium</h2>
-                    <a href="#">ARS 10.549/MES (FINAL)**</a>
+                <div class="main-Seccion_dos_eleccion_cabecera">
+                    <div class="main-Seccion_dos_eleccion_cabeceraOpciones">
+                        <h2>ESTANDAR</h2>
+                        <a href="#">Ars 7.399/Mes (Final)**</a>
+                    </div>
+                    <div class="main-Seccion_dos_eleccion_cabeceraOpciones">
+                        <h2>PREMUIM</h2>
+                        <a href="#">Ars 10.549/Mes (Final)**</a>
+                    </div>
+                </div>          
+                <div class="main-Seccion_dos_eleccion_Estrenos">
+                    <h3>Estrenos de películas, series originales y clásicos de Disney, Pixar, Marvel, Star Wars, National Geographic y Star</h3>
+                    <div class="signo">
+                        <h4>*</h4>
+                        <h4>*</h4>
+                    </div> 
                 </div>
                 <div class="main-Seccion_dos_eleccion_Estrenos">
-                        <h3>Estrenos de películas, series originales y clásicos de Disney, Pixar, Marvel, Star Wars, National Geographic y Star</h3>
-                        <h3>*</h3>
-                        <h3>*</h3>
-                </div>
-                <div class="main-Seccion_dos_eleccion_Calidad">
-                        <h3>Calidad de video hasta 4K UHD/HDR y sonido Dolby Atmos***</h3>
+                    <h3>Calidad de video hasta 4K UHD/HDR y sonido Dolby Atmos***</h3>
+                    <div class="signo">
                         <h3>-</h3>
                         <h3>*</h3>
+                    </div>    
                 </div>
-                <div class="main-Seccion_dos_eleccion_Dispositivos">
-                        <h3>Dispositivos para ver en simultáneo</h3>
+                <div class="main-Seccion_dos_eleccion_Estrenos">
+                    <h3>Dispositivos para ver en simultáneo</h3>
+                    <div class="signo">
                         <h3>2</h3>
                         <h3>4</h3>
+                    </div>
                 </div>
-                <div class="main-Seccion_dos_eleccion_Descargas">
-                        <h3>Descargas para ver tus favoritos sin conexión ni demoras</h3>
+                <div class="main-Seccion_dos_eleccion_Estrenos">
+                    <h3>Descargas para ver tus favoritos sin conexión ni demoras</h3>
+                    <div class="signo">
                         <h3>*</h3>
                         <h3>*</h3>
+                    </div>
                 </div>
                 <div class="main-Seccion_dos_eleccion_Eventos">
-                        <p>* Los eventos en directo y deportivos incluyen publicidad como parte de cada transmisión, independientemente de tu plan.<br>
+                    <p>* Los eventos en directo y deportivos incluyen publicidad como parte de cada transmisión, independientemente de tu plan.<br>
                             ** El precio podría variar en caso de que el pago se realice en otras plataformas. Podrían aplicar cargos de terceros.<br>
-                            *** La calidad de audio y video y las descargas dependen del servicio de internet, las capacidades del dispositivo, el tipo de contenido y el nivel de servicio.</p>
+                    *** La calidad de audio y video y las descargas dependen del servicio de internet, las capacidades del dispositivo, el tipo de contenido y el nivel de servicio.</p>
                 </div>
             </div>
         </section>
-        <section class="main-Secccion_tres">
-            <div class="main-Secccion_tres_descripcion">
-                <h3>Solo en Disney+</h3>
+        <section class="main-Seccion_uno">
+            <div class="main-Seccion_uno-descripcion">
+                <h4>Solo en Disney+</h3>
                 <h5>¡Las mejores producciones originales y exclusivas</h5>
             </div>
-            <div class="main-Secccion_tres_imagen">
+            <div class="main-Seccion_uno_imagen">
                 <img src="./image/cartelera2.jpg" alt="Cartelera 2">
             </div>
         </section>
         <section class="main-Seccion_cuatro">
             <div class="main-Seccion_cuatro_superior">
                 <div class="main-Seccion_cuatro_superior_descripcion">
-                    <h2>Cuando y donde quieras</h2>
-                    <h3>Disfrutá tus favoritos en cualquier momento y lugar.</h3>
-                </div>
+                    <h4>Cuando y donde quieras</h4>
+                    <h5>Disfrutá tus favoritos en cualquier momento y lugar.</h5>
+            </div>
                 <div class="main-Seccion_cuatro_superior_imagen">
                     <img src="./image/imagen-diferentesPantallas.jpeg" alt="">
                 </div>
@@ -110,9 +120,9 @@
                     <h2>Preguntas frecuentes</h2>
                 </div>
                 <div class="main-Seccion_cuatro_inferior_preguntas">
-                    <a href="#">¿Qué incluye Disney+</a>
-                    <a href="#">Cómo puedo pagar?</a>
-                    <a href="#">Dónde puedo ver Disney+?</a>
+                    <a href="#">¿Qué incluye Disney    +</a>
+                    <a href="#">Cómo puedo pagar?      +</a>
+                    <a href="#">Dónde puedo ver Disney?+</a>
                 </div>
             </div>
         </section>
