--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="header-inferior_descripcion">
                 <h2>Hay un nuevo Disney+</h2>
-                <h2>donde todo se encuentra</h3>
+                <h2>donde todo se encuentra</h2>
             </div>
             <div class="header-inferior_eleccionPlanes">
                 <div class="header-inferior_eleccionPlanes_Estandar">
@@ -29,10 +29,12 @@
                     <a href="#">DISNEY PREMIUM</a>
                     <h4>Disney+ Premium incluye todos los canales basicos de ESPN, torneos y mas ed 500 eventos exclusivos por mes</h4>
                 </div>
-                <div class="header-inferior_eleccionPlanes_detalles">
-                    <a href="#">Ver los detalles de los planes</a>
-                </div>
             </div>
+            <div class="header-inferior_eleccionPlanes_detalles">
+                    <a href="#">Ver los detalles de los planes</a>
+                    <img src="./image/flecha.svg" alt="flecha">
+            </div>
+            
         </div>
     </header>
     <main class="main">
@@ -98,8 +100,8 @@
         </section>
         <section class="main-Seccion_uno">
             <div class="main-Seccion_uno-descripcion">
-                <h4>Solo en Disney+</h3>
-                <h5>¡Las mejores producciones originales y exclusivas</h5>
+                <h4>Solo en Disney+</h4>
+                <h5>¡Las mejores producciones originales y exclusivas!</h5>
             </div>
             <div class="main-Seccion_uno_imagen">
                 <img src="./image/cartelera2.jpg" alt="Cartelera 2">
@@ -120,9 +122,18 @@
                     <h2>Preguntas frecuentes</h2>
                 </div>
                 <div class="main-Seccion_cuatro_inferior_preguntas">
-                    <a href="#">¿Qué incluye Disney    +</a>
-                    <a href="#">Cómo puedo pagar?      +</a>
-                    <a href="#">Dónde puedo ver Disney?+</a>
+                    <div class="main-Seccion_cuatro_inferior_preguntas-1">
+                        <h4>¿Qué incluye Disney</h4>
+                        <img src="./image/plus-lg.svg" alt="">
+                    </div>
+                    <div class="main-Seccion_cuatro_inferior_preguntas-2">
+                        <h4>Cómo puedo pagar? </h4>
+                        <img src="./image/plus-lg.svg" alt="">
+                    </div>
+                    <div class="main-Seccion_cuatro_inferior_preguntas-3">
+                        <h4>Dónde puedo ver Disney? </h4>
+                        <img src="./image/plus-lg.svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -137,10 +148,22 @@
                 <h4>Acuerdo de Suscripcion</h4>
             </div>
             <div class="footer-informacion_ayuda">
-                <h3>Ayuda</h3>
-                <h3>Originales</h3>
-                <h3>Peliculas y series</h3>
-                <h3>Colecciones</h3>
+                <div class="footer-informacion_ayuda-items">
+                    <h3>Ayuda</h3>
+                    <img src="./image/flecha.svg">
+                </div>
+                <div class="footer-informacion_ayuda-items">
+                    <h3>Originales</h3>
+                    <img src="./image/flecha.svg">
+                </div>
+                <div class="footer-informacion_ayuda-items">
+                    <h3>Peliculas y series</h3>
+                    <img src="./image/flecha.svg">
+                </div>
+                <div class="footer-informacion_ayuda-items">
+                    <h3>Colecciones</h3>
+                    <img src="./image/flecha.svg">
+                </div>  
             </div>
         </div>
         <div class="footer-empresas">
